Benefitfocus Careers - Manager, Software Engineering (Relocation Opportunity). Lightmatter - Software Engineer - Machine Learning. SkySlope - Jobs: Software Engineer - Apply online. SkySlope - Jobs: Front End Software Engineer - Apply online. SkySlope - Jobs: Senior Software Engineer - Apply online. ROAR for Good - Jobs: Senior Software Engineer - Apply online. Flywire Senior Software Engineer | SmartRecruiters. New Relic Careers - Lead Software Engineer, Java. New Relic Careers - Lead Software Engineer - Java.     Software Developer at Sunrise Futures, LLC . Apttus Careers - Senior Software Engineer, SFDC. Software Engineer (.NET/MVC) - Latitude, Inc. - Career Page. ServiceNow Careers - Senior Front End Software Engineer. Community Brands Careers - Software Developer. Community Brands Careers - Full Stack Software Developer. Job Application for Software Engineer - New Grad - Product at TrialSpark. Job Application for Software Engineer - Product at TrialSpark. Etsy - Senior Software Engineer, Web Platform. Etsy - Software Engineer, Core Platform. Software Engineer, Data Platform Team - FullContact - Career Page. Software Engineer-Java, J2EE, AWS, DRM, HTML5, CSS3-21775 #0236 job at Radiant Digital in Irving, TX, powered by JobScore. Sr Software Engineer- Linux, Unix, Windows,C++, Java-21262 #0234 job at Radiant Digital in Temple Terrace, FL, powered by JobScore. Garmin Cluj - Jobs: C Software Engineer - Apply online. Job Application for Senior Software Engineer, Desktop-Core Experience Squad at Abstract. Gigamon Careers - Senior Staff Software Engineer - Sensors. ServiceNow Careers - Staff Front End Software Engineer (UI). Apttus Careers - Senior Software Engineer, AI. Job @ KI Group (Cologne): Mobile Software Engineer... | JOIN. BBOXX - Jobs: Embedded Software Engineer - Apply online. Apartment List - Full-Stack Software Engineer - Connections. Job Application for Senior Software Engineer (Android) at Careem. Job Application for Senior Software Engineer (iOS) at Ca

--- a/software.html
+++ b/software.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oX2rafwk&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=ncaCUKw7'>Benefitfocus Careers - Manager, Software Engineering (Relocation Opportunity)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-25</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/lightmatter/c42beaff-467d-4368-a4ac-c212a2cd4aa2'>Lightmatter - Software Engineer - Machine Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
@@ -67,7 +71,7 @@
 <p><span class="badge badge-light">Barcelona,</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/newrelic/job/osOCafwM'>New Relic Careers - Lead Software Engineer - Java</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/newrelic/job/osOCafwM'>New Relic Careers - Lead Software Engineer - Java</a></h5> 
 <p><span class="badge badge-light">Portland,</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -93,11 +97,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/communitybrands/job/onpBafwh'>Community Brands Careers - Full Stack Software Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/communitybrands/job/onpBafwh'>Community Brands Careers - Full Stack Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/trialspark/jobs/1089222'>Job Application for Software Engineer - New Grad - Product at TrialSpark</a></h5> 
+<h5><a href='https://boards.greenhouse.io/trialspark/jobs/1089222'>Job Application for Software Engineer - New Grad - Product at TrialSpark</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -109,7 +113,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/etsy/9671433b-8085-47b9-aa42-294d9ac443ac'>Etsy - Software Engineer, Core Platform</a></h5> 
+<h5><a href='https://jobs.lever.co/etsy/9671433b-8085-47b9-aa42-294d9ac443ac'>Etsy - Software Engineer, Core Platform</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -117,7 +121,7 @@
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/software-engineer-java-j2ee-aws-drm-html5-css3-21775-d71Y28RSSr6ArBaKkRyNN8'>Software Engineer-Java, J2EE, AWS, DRM, HTML5, CSS3-21775 #0236 job at Radiant Digital in Irving, TX, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/software-engineer-java-j2ee-aws-drm-html5-css3-21775-d71Y28RSSr6ArBaKkRyNN8'>Software Engineer-Java, J2EE, AWS, DRM, HTML5, CSS3-21775 #0236 job at Radiant Digital in Irving, TX, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -185,16 +189,16 @@
 <p><span class="badge badge-light">Bellevue, WA</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Visa/743999692279770-lead-software-engineer-cloud-engineering'>Visa Lead Software Engineer - Cloud Engineering | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999692279770-lead-software-engineer-cloud-engineering'>Visa Lead Software Engineer - Cloud Engineering | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bellevue, WA</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bridgemaker.join.com/jobs/259100-software-developer-m-w-d-uptodate'>Software Developer</a></h5> 
+<h5><a href='https://bridgemaker.join.com/jobs/259100-software-developer-m-w-d-uptodate'>Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... I agree with the JOIN Terms & Conditions and Data Privacy Policy. APPLY FOR 
 THIS JOB. Already applied? Check the status of your application. Share this job:.</p>
 <hr/>
-<h5><a href='https://sygnum.join.com/jobs/257525-back-end-software-developer-intern-3-month-internship'>Job @ Sygnum (Z?rich): Back-End Software Developer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sygnum.join.com/jobs/257525-back-end-software-developer-intern-3-month-internship'>Job @ Sygnum (Z?rich): Back-End Software Developer... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... I agree with the JOIN Terms & Conditions and Data Privacy Policy. APPLY FOR 
 THIS JOB. Already applied? Check the status of your application. Share this job:.</p>
@@ -255,7 +259,7 @@ Rosalind Picard to learn more about the history of Empatica and what drives our
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/newrelic/job/oXgDafwK'>New Relic Careers - Lead Software Engineer, Java</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/newrelic/job/oXgDafwK'>New Relic Careers - Lead Software Engineer, Java</a></h5> 
 <p><span class="badge badge-light">Barcelona,</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -299,7 +303,7 @@ Rosalind Picard to learn more about the history of Empatica and what drives our
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/corelight/jobs/1788742'>Job Application for Engineering: Senior Software Engineer - Packet Handling at Job Board</a></h5> 
+<h5><a href='https://boards.greenhouse.io/corelight/jobs/1788742'>Job Application for Engineering: Senior Software Engineer - Packet Handling at Job Board</a></h5> 
 <p><span class="badge badge-light">Columbus, Ohio San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -449,11 +453,7 @@ Developer ? Sr. Software Engineer ? Senior Web Developer?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/InfiniteComputingSystems/743999692134707-urgently-required-software-engineer-annapolis-md-new-york-ny-10018'>Infinite Computing Systems Urgently Required - Software Engineer - Annapolis, MD / New York, NY, 10018 | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://ecosia.workable.com/j/5C4C1BD108'>Ecosia - Jobs: Software Developer: Backend focus - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/InfiniteComputingSystems/743999692134707-urgently-required-software-engineer-annapolis-md-new-york-ny-10018'>Infinite Computing Systems Urgently Required - Software Engineer - Annapolis, MD / New York, NY, 10018 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
