--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://careers.jobscore.com/careers/avispatechnology/jobs/site-reliability-engineer-bVsfdSRWir6B52aKkRyNN8'>Site Reliability Engineer #5073 job at Avispa Technology in Sunnyvale, CA, powered by JobScore</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/invision/jobs/1792758'>Job Application for Staff Site Reliability Engineer - Monitoring and Observability at InVision</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
@@ -50,7 +54,7 @@
 PagerDuty runs. You partner with Engineering stakeholders to design and deliver
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SnowSoftware/743999692115340-site-reliability-engineer'>Snow Software Site Reliability Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SnowSoftware/743999692115340-site-reliability-engineer'>Snow Software Site Reliability Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -86,7 +90,7 @@ PagerDuty runs. You partner with Engineering stakeholders to design and deliver
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/creditkarma/dae9e9d8-fcae-4d6a-919d-8a36d94ee34f'>Credit Karma - Staff Site Reliability, Observability /  Staff Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/creditkarma/dae9e9d8-fcae-4d6a-919d-8a36d94ee34f'>Credit Karma - Staff Site Reliability, Observability /  Staff Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -112,7 +116,7 @@ NodeJS.</p>
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/adhocexternal/jobs/4365099002'>Job Application for Site Reliability Engineer  at Ad Hoc Team</a></h5> 
+<h5><a href='https://boards.greenhouse.io/adhocexternal/jobs/4365099002'>Job Application for Site Reliability Engineer  at Ad Hoc Team</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -120,7 +124,7 @@ NodeJS.</p>
 <p><span class="badge badge-light">Charlotte</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/adhocexternal/jobs/4365101002'>Job Application for Site Reliability Engineer  at Ad Hoc Team</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/adhocexternal/jobs/4365101002'>Job Application for Site Reliability Engineer  at Ad Hoc Team</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -132,7 +136,7 @@ NodeJS.</p>
 <p><span class="badge badge-light">Minneapolis</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/adhocexternal/jobs/4365104002'>Job Application for Site Reliability Engineer  at Ad Hoc Team</a></h5> 
+<h5><a href='https://boards.greenhouse.io/adhocexternal/jobs/4365104002'>Job Application for Site Reliability Engineer  at Ad Hoc Team</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -251,11 +255,11 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='http://insightengines.applytojob.com/apply/MjehfIgIdM/Site-Reliability-Engineer'>Site Reliability Engineer - Insight Engines - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://insightengines.applytojob.com/apply/MjehfIgIdM/Site-Reliability-Engineer'>Site Reliability Engineer - Insight Engines - Career Page</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SnowSoftware/743999691913366-site-reliability-engineer-architect'>Snow Software Site Reliability Engineer Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SnowSoftware/743999691913366-site-reliability-engineer-architect'>Snow Software Site Reliability Engineer Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -263,7 +267,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/oodlefinance/jobs/4351849002'>Job Application for Site Reliability Engineer at Oodle Finance</a></h5> 
+<h5><a href='https://boards.greenhouse.io/oodlefinance/jobs/4351849002'>Job Application for Site Reliability Engineer at Oodle Finance</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -317,7 +321,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SGDigital/743999691802434-site-reliability-engineer'>SG Digital Site Reliability Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SGDigital/743999691802434-site-reliability-engineer'>SG Digital Site Reliability Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -351,11 +355,11 @@ Identity?...</p>
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/newrelic/job/oAFwafwF'>New Relic Careers - Lead Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/newrelic/job/oAFwafwF'>New Relic Careers - Lead Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Barcelona,</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/onesignal/1825dfda-35f3-4faa-be75-07b97a3a3afd'>OneSignal - Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/onesignal/1825dfda-35f3-4faa-be75-07b97a3a3afd'>OneSignal - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -363,7 +367,7 @@ Identity?...</p>
 <p><span class="badge badge-light">Brazil</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/newrelic/job/oAFwafwF'>New Relic Careers - Lead Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/newrelic/job/oAFwafwF'>New Relic Careers - Lead Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Barcelona,</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -435,7 +439,7 @@ responsible for building and maintaining an enterprise level, cloud computing?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<h5><a href='https://mercari.workable.com/j/1B575783E3'>Mercari, inc. - Jobs: Software Engineer, Site Reliability [Internship] - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mercari.workable.com/j/1B575783E3'>Mercari, inc. - Jobs: Software Engineer, Site Reliability [Internship] - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -449,12 +453,6 @@ responsible for building and maintaining an enterprise level, cloud computing?..
 <hr/>
 <h5><a href='https://jobs.jobvite.com/whitehat-security/job/oYNpafw4'>WhiteHat Security Careers - Site Reliability Engineer, Infrastructure</a></h5> 
 <p><span class="badge badge-light">California</span></p>
-<p>Posted on: 2019-07-12</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://infinitecsolutions.recruitee.com/o/senior-site-reliability-engineer-fmdiv'>
-      Senior Site Reliability Engineer (f/m/div) - Infinitec Solutions
-    </a></h5> 
-<p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
 
